fixed question posted URL, z-index issue with modal, and WIP chat-timer

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -47,6 +47,10 @@ $border-grey-color: rgb(150, 150, 150);
   border: solid 1px $border-grey-color;
 }
 
+.CodeMirror {
+  z-index: 0
+}
+
 #txtArea {
   width: 95%;
   height: 100%;
